# games-core

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: codeql.yml
lectures/: CMakeLists.txt  lecture2.cpp  lecture3.cpp
lectures/lecture2/: CMakeLists.txt  main.cpp
src_assignments/four/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Components.h  Entity.cpp  Entity.h  GameEngine.cpp  Physics.cpp  Physics.h  Scene.cpp  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Zelda.cpp  Scene_Zelda.h  Vec2.cpp  Vec2.h  main.cpp
src_assignments/one/: README.md  configs.txt  one.cpp
src_assignments/three/: Action.cpp  Action.h  Animation.cpp  Animation.h  Assets.cpp  Assets.h  CMakeLists.txt  Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  Physics.cpp  Physics.h  Scene.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h  Vec2.h  config.txt  main.cpp
src_assignments/two/: CMakeLists.txt  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  README.md  Vec2.cpp  Vec2.h  config.txt  main.cpp
src_assignments/two/test/: CMakeLists.txt  Vec2_test.cpp
src_lectures/: lecture2.cpp  lecture3.cpp  lecture4.cpp  students.txt
